--- a/desktop-themes/BlackMATE/gtk-3.0/other-applications.css
+++ b/desktop-themes/BlackMATE/gtk-3.0/other-applications.css
@@ -269,6 +269,10 @@ NemoQueryEditor .toolbar .entry:focus {
 	text-shadow: none;
 }
 
+.nemo-desktop .entry{
+	caret-color: #000000;
+}
+
 /*************
  * Yumex-DNF *
  *************/
